fixed header of catalog.html alignment

--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -24,6 +24,10 @@
 }
 
 @media (min-width: $tablet-width) {
+  .feedback {
+    min-width: 768px;
+  }
+
   .feedback__title,
   .feedback__description {
     width: 435px;
